          - fix problem with removing reports when trying to save files on a full disk.
          - Config Tool:
            - add reference clone selection page
          - Panorama View:
            - add clean dashboards button in dashboard management all tab
            - add cli command to clean dashboards
            - fix grid panels not restoring column width

2.02     Wed Sep 30 17:38:30 CEST 2015
          - show eventhandler name on extinfo page if available
          - limit json exports to accounts with configuration information role
          - clear process info cache after sending commands
          - fix weekly cron jobs on Tuesdays (Alexandre Anriot, #525)
          - Panorama View:
            - make text label background size configurable
            - add extra_fonts option to extend the list of available fonts
            - add show border option for services and hosts panel
            - fix list of public dashboards for admin users
            - fix label zIndex positioning
            - fix label position not being saved
            - fix label removed when hitting cancel in settings window
          - Config Tool:
            - fix tools changes not beeing saved
            - fix stripping last option when rewriting commands (#518)
          - Business Process:
            - add eventhandler attribute

2.00-2   Fri Aug 28 16:19:25 CEST 2015
          - add cancel button to all external jobs
          - parse performance data with U(nknown) values
          - fix user password link when invoked from main page
          - fix logrotate missing su directive on logrotate > 3.8 (#471)
          - fix duplicate installed logrotate file (#511)
          - fix config file parser on escaped hashes (#505)
          - Reports:
            - add danish localization
          - Config Tool:
            - add generic text editor
            - fix problem when cloning commands
          - Panorama View: